# spdmd

./: LICENSE  meson.build  meson_options.txt
.github/: CODEOWNERS
configurations/: spdm_responder_config.json
document/: SPDM_Design.docx  SPDM_UnitTest.docx
src/: CMakeLists.txt  spdm_config_reader.cpp  spdm_config_reader.hpp  spdmapplib.cpp  spdmapplib.hpp  spdmd.cpp  spdmd.hpp  test.cpp  util.cpp  xyz.openbmc_project.spdmd.service
